# X2S

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  config.example.json  e2e_local.sh  pull_request_template.md  stress.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cmake-single-platform.yml  code-quality.yml  coverage.yml  e2e-test-and-make.yml  performance.yml  release.yml  trigger-docker.yml
drawio/: X2S.drawio
src/: api_helpers.c  api_helpers.h  api_server.c  api_server.h  auth.c  auth.h  cli_setup.c  cli_setup.h  format_registry.h  format_v1.c  main.c  migrate.c  obj_helpers.c  obj_helpers.h  obj_operations.c  obj_operations.h  obj_structs.h
src/auth/: auth.c  auth.h  refresh_token.c  refresh_token.h  token.c  token.h
src/cli/: main.c  migrate.c
src/config/: cli_setup.c  config_parser.h
src/core/: format.h  format_registry.h  hex_utils.c  hex_utils.h  object_types.h
src/crypto/: encryption.c  encryption.h  object_crypto.c  object_crypto.h
src/format/: format_v1.c  format_v2.c  format_v2.h
src/server/: api_server.c  api_server.h  http_utils.c  http_utils.h  mime_types.c  mime_types.h  rate_limiter.c  rate_limiter.h
src/storage/: object_index.c  object_index.h  object_io.c  object_io.h  object_permissions.c  object_permissions.h  object_repository.c  object_repository.h  object_serialization.c  object_serialization.h
tests/: README.md  benchmark.sh
